popup and dark mode fixed

--- a/style.css
+++ b/style.css
@@ -1,6 +1,28 @@
-body {
-  background: #fff;
-  overflow-y: scroll;
+:root {
+    --clr-light: #fff;
+    --clr-dark: #181b25;
+    --clr-1: #5B84F0;
+    --clr-2: #A4BAF9;
+    --clr-3: #3C3C3C;
+    --clr-4: #707070;
+  
+    --background: var(--clr-light);
+  }
+  
+@media (prefers-color-scheme: dark) {
+    :root {
+        --clr-1: #A4BAF9;
+        --clr-2: #5B84F0;
+        --clr-3: #fff;
+        --clr-4: #fff;
+    --background: var(--clr-dark);
+    }
+
+}
+
+body {  
+    background: var(--background);
+    overflow-y: scroll;
 }
 
 .logo-container {
@@ -10,7 +32,7 @@ body {
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
-  background: #5B84F0;
+  background: var(--clr-2);
 }
 
 .arrow {
@@ -19,10 +41,9 @@ body {
 }
 
 .arrow a {
-    color: white;
+    color: var(--clr-light);
     font-size: 50px;
 }
-
 
 .container {
     width: 80%;
@@ -116,7 +137,7 @@ body {
 #navbar {
   z-index: 999;
   top: -70px;
-  background-color: #5B84F0;
+  background-color: var(--clr-2);
   position: fixed;
   width: 100%;
   height: 70px;
@@ -135,7 +156,7 @@ body {
 
 #navbar li {
     display: inline-block;
-    color: white;
+    color: var(--clr-light);
     padding: 15px;
     font-size: 17px;
     font-family: "Montserrat";
@@ -143,7 +164,7 @@ body {
 }
 
 #navbar a {
-    color: white;
+    color:var(--clr-light);
     text-decoration: none;
 }
 
@@ -164,12 +185,12 @@ h2 {
     font-family: "Montserrat", sans-serif;
     font-size: 37px;
     font-weight: 700;
-    color: #3C3C3C;
+    color: var(--clr-3);
     padding: 130px 0 0 0;
 }
 
 hr {
-    border: solid 3px #5B84F0;
+    border: solid 3px var(--clr-2);
     margin-top: 12px;
     width: 75px;
 }
@@ -189,7 +210,7 @@ hr {
 
 .paragraph {
     font-family: "Nunito", sans-serif;
-    color: #707070;
+    color:var(--clr-4);
     margin-top: 20px;
     width: 400px;
     font-size: 17px;
@@ -228,7 +249,7 @@ h5 {
     font-family: "Montserrat", sans-serif;
     font-size: 22px;
     font-weight: 700;
-    color: #3C3C3C;
+    color: var(--clr-3);
     margin-top: 25px;
     
 }
@@ -239,7 +260,7 @@ h5 {
     font-family: "Nunito", sans-serif;
     font-size: 17px;
     line-height: 27px;
-    color: #707070;
+    color: var(--clr-4);
 }
 
 
@@ -266,7 +287,7 @@ h5 {
 .project-img {
     width: 420px;
     height: 300px;
-    background-color: #A4BAF9;
+    background-color: var(--clr-2);
     border-radius: 20px;
 }
 
@@ -292,7 +313,7 @@ h5 {
 }
 
 .bgcards {
-    background-color: #A4BAF9;
+    background-color: var(--clr-2);
 }
 
 .box-cards {
@@ -302,7 +323,7 @@ h5 {
 .boxcard {
     width: 250px;
     height: 320px;
-    background-color: #FFFF;
+    background-color: var(--background);
     margin: 30px;
     border-radius: 0px 20px 20px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -362,7 +383,7 @@ h5 {
   
   /* Modal Content */
   .modal-content {
-    background-color: #fefefe;
+    background-color: var(--background);
     margin: auto;
     padding: 20px;
     border-radius: 20px;
@@ -381,7 +402,7 @@ h5 {
   .text {
     margin-top: 30px;
     font-family: "Nunito", sans-serif;
-    color: #707070;
+    color:var(--clr-4);
     font-size: 17px;
     line-height: 27px;
     font-weight: 400;
@@ -389,7 +410,7 @@ h5 {
 
 .personal-social a {
     margin: 15px;
-    color: #A4BAF9;
+    color: var(--clr-2);
     font-size: 40px;
  }
  
@@ -398,13 +419,13 @@ h5 {
  }
  
  .personal-social a:hover {
-     color: #5B84F0;
+     color: var(--clr-1);
      transition-duration: 0.2s;
  }
   
   /* The Close Button */
   .close, .close2, .close3 {
-    color: #aaaaaa;
+    color:#707070;
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -414,7 +435,7 @@ h5 {
   .close:hover, .close2:hover, .close3:hover, .close:focus, .close2:focus, .close3:focus {
     -webkit-transform: rotateZ(180deg);
     transform: rotateZ(180deg);
-    color: #3C3C3C;
+    color:#3C3C3C;
     text-decoration: none;
     cursor: pointer;
   }
@@ -434,7 +455,7 @@ h5 {
 
 .boxcontact {
    margin: 20px;
-   color: #A4BAF9;
+   color: var(--clr-2);
    font-size: 50px;
 }
 
@@ -443,7 +464,7 @@ h5 {
 }
 
 .boxcontact i:hover {
-    color: #5B84F0;
+    color: var(--clr-1);
     transition-duration: 0.2s;
     cursor: pointer;
 }
@@ -454,13 +475,13 @@ h5 {
 
 footer {
     margin-top: 100px;
-    background-color: #5B84F0;
+    background-color: var(--clr-2);
     height: 100px;
 }
 
 footer p {
     text-align: center;
-    color: white;
+    color:var(--clr-light);
     font-size: 15px;
     font-family: "Nunito", sans-serif;
     padding-top: 45px;  
